--- a/Imputing Missing Data.ipynb
+++ b/Imputing Missing Data.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "<module 'missing_data_code' from '/Users/mariomoreno/Desktop/ML Projects/Mexico OC/missing_data_code.py'>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Zero Imputation "
+    "### 1) Zero Imputation "
    ]
   },
   {
@@ -687,27 +687,386 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Case Deletion "
+    "### 2) Case Deletion "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just to track the shape of our database over time and make sure deletion is working, it's important to note that it's 224 rows and 46 columns. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "(224, 46)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coastline"
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With that done, time to delete. We'll start with deleting the rows that have nulls (in this case, all the Quintana Roo entries). We should expect our row number (224) to decrease by seven to 217"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(217, 46)"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deleted_rows = mdc.case_deletion(df, 'row')\n",
+    "deleted_rows.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>entidad</th>\n",
+       "      <th>year</th>\n",
+       "      <th>alumnos_inscritos_hs</th>\n",
+       "      <th>hombres_inscritos_hs</th>\n",
+       "      <th>mujeres_inscritas_hs</th>\n",
+       "      <th>maestros_hs</th>\n",
+       "      <th>escuelas_hs</th>\n",
+       "      <th>convenios_trabajo_no_juicio</th>\n",
+       "      <th>conflictos_trabajo</th>\n",
+       "      <th>emplazamientos_huelga</th>\n",
+       "      <th>...</th>\n",
+       "      <th>prod_zinc_t</th>\n",
+       "      <th>prod_coque_t</th>\n",
+       "      <th>prod_fierropellets_t</th>\n",
+       "      <th>prod_azufre_t</th>\n",
+       "      <th>prod_barita_t</th>\n",
+       "      <th>prod_fluorita_t</th>\n",
+       "      <th>altitud</th>\n",
+       "      <th>costa_km</th>\n",
+       "      <th>municipios</th>\n",
+       "      <th>pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aguascalientes</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>40129</td>\n",
+       "      <td>19250</td>\n",
+       "      <td>20879</td>\n",
+       "      <td>2727</td>\n",
+       "      <td>144</td>\n",
+       "      <td>2698</td>\n",
+       "      <td>3239</td>\n",
+       "      <td>325</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3883423.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1870</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1195787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Baja California</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>107624</td>\n",
+       "      <td>53692</td>\n",
+       "      <td>53932</td>\n",
+       "      <td>6192</td>\n",
+       "      <td>271</td>\n",
+       "      <td>2342</td>\n",
+       "      <td>9353</td>\n",
+       "      <td>3241</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3883423.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1493.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3224843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Baja California Sur</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>23247</td>\n",
+       "      <td>11780</td>\n",
+       "      <td>11467</td>\n",
+       "      <td>1588</td>\n",
+       "      <td>76</td>\n",
+       "      <td>1255</td>\n",
+       "      <td>1660</td>\n",
+       "      <td>296</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3883423.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2131.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>649616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Campeche</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>28350</td>\n",
+       "      <td>14349</td>\n",
+       "      <td>14001</td>\n",
+       "      <td>1975</td>\n",
+       "      <td>106</td>\n",
+       "      <td>3373</td>\n",
+       "      <td>1179</td>\n",
+       "      <td>144</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3883423.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>425.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>836747</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Coahuila de Zaragoza</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>82553</td>\n",
+       "      <td>41397</td>\n",
+       "      <td>41156</td>\n",
+       "      <td>6219</td>\n",
+       "      <td>330</td>\n",
+       "      <td>23331</td>\n",
+       "      <td>7867</td>\n",
+       "      <td>545</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1648709.0</td>\n",
+       "      <td>2567865.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22161.0</td>\n",
+       "      <td>121833.0</td>\n",
+       "      <td>1700</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>38</td>\n",
+       "      <td>2782012</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 46 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     entidad  year  alumnos_inscritos_hs  \\\n",
+       "0  Aguascalientes             2010                 40129   \n",
+       "1  Baja California            2010                107624   \n",
+       "2        Baja California Sur  2010                 23247   \n",
+       "3  Campeche                   2010                 28350   \n",
+       "4       Coahuila de Zaragoza  2010                 82553   \n",
+       "\n",
+       "   hombres_inscritos_hs  mujeres_inscritas_hs  maestros_hs  escuelas_hs  \\\n",
+       "0                 19250                 20879         2727          144   \n",
+       "1                 53692                 53932         6192          271   \n",
+       "2                 11780                 11467         1588           76   \n",
+       "3                 14349                 14001         1975          106   \n",
+       "4                 41397                 41156         6219          330   \n",
+       "\n",
+       "   convenios_trabajo_no_juicio  conflictos_trabajo  emplazamientos_huelga  \\\n",
+       "0                         2698                3239                    325   \n",
+       "1                         2342                9353                   3241   \n",
+       "2                         1255                1660                    296   \n",
+       "3                         3373                1179                    144   \n",
+       "4                        23331                7867                    545   \n",
+       "\n",
+       "    ...     prod_zinc_t  prod_coque_t  prod_fierropellets_t  prod_azufre_t  \\\n",
+       "0   ...             0.0           0.0             3883423.0            0.0   \n",
+       "1   ...             0.0           0.0             3883423.0            0.0   \n",
+       "2   ...             0.0           0.0             3883423.0            0.0   \n",
+       "3   ...             0.0           0.0             3883423.0            0.0   \n",
+       "4   ...             0.0     1648709.0             2567865.0            0.0   \n",
+       "\n",
+       "   prod_barita_t  prod_fluorita_t  altitud costa_km  municipios      pop  \n",
+       "0            0.0              0.0     1870      0.0          11  1195787  \n",
+       "1            0.0              0.0        3   1493.0           5  3224843  \n",
+       "2            0.0              0.0       10   2131.0           5   649616  \n",
+       "3            0.0              0.0       10    425.0          11   836747  \n",
+       "4        22161.0         121833.0     1700      0.0          38  2782012  \n",
+       "\n",
+       "[5 rows x 46 columns]"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deleted_rows.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we'll try deleting the columns that have nulls (in this case, all the metals). We should expect our column number (46) to decrease by ten to 36."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(224, 36)"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deleted_columns = mdc.case_deletion(df, 'column')\n",
+    "deleted_columns.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['entidad', 'year', 'alumnos_inscritos_hs', 'hombres_inscritos_hs',\n",
+       "       'mujeres_inscritas_hs', 'maestros_hs', 'escuelas_hs',\n",
+       "       'convenios_trabajo_no_juicio', 'conflictos_trabajo',\n",
+       "       'emplazamientos_huelga', 'emplazamientos_huelga_solucionados',\n",
+       "       'huelgas_estalladas', 'huelgas_locales_solucionadas', 'denuncias_total',\n",
+       "       'denuncias_salud', 'denuncias_arma', 'denuncias_bancaria',\n",
+       "       'denuncias_leyg', 'denuncias_comms', 'denuncias_servpub',\n",
+       "       'denuncias_fiscales', 'denuncias_ambiente', 'denuncias_asocdelictuosa',\n",
+       "       'denuncias_patrimoniales', 'denuncias_propintelectual',\n",
+       "       'denuncias_robocarretera', 'denuncias_otras', 'total_carretera_km',\n",
+       "       'carretera_pavimentada_km', 'carretera_revestida_km',\n",
+       "       'carretera_terraceria_kg', 'brechas_mejoradas_km', 'altitud',\n",
+       "       'costa_km', 'municipios', 'pop'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deleted_columns.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pretty straightforward. We now have two dataframes:\n",
+    "- deleted_rows is the dataframe with all the rows with missing values deleted\n",
+    "- deleted_columns in the dataframe with all the columns with missing values deleted\n",
+    "\n",
+    "There is a rule of thumb in deleting rows or columns as a way to deal with missing values: **if a variable has more than 5% of it's values missing, do not delete**\n",
+    "\n",
+    "While our current example meets the parameters of the rule of thumb, it's important to note that this is not the ideal way to deal with missing values, particularly in an index such as this.\n",
+    "\n",
+    "That's why I'll now go through other forms of imputing missing variables. Starting with median imputation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3) Median Imputation "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll go back to using our original dataframe -- df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "median_df = md"
    ]
   }
  ],
