progress on lregress

--- a/Reading in Data.ipynb
+++ b/Reading in Data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
        "32   2440.0       NaN        58.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -895,49 +895,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Guanajuato                         7\n",
-       "Nayarit                            7\n",
+       "Puebla                             7\n",
+       "Estados Unidos Mexicanos           7\n",
+       "Campeche                           7\n",
+       "Guerrero                           7\n",
+       "San Luis Potosí                    7\n",
+       "Hidalgo                            7\n",
+       "Jalisco                            7\n",
        "Coahuila de Zaragoza               7\n",
-       "Durango                            7\n",
+       "Tabasco                            7\n",
        "Querétaro                          7\n",
-       "Aguascalientes                     7\n",
-       "Baja California Sur                7\n",
+       "Chiapas                            7\n",
+       "Tamaulipas                         7\n",
        "Morelos                            7\n",
+       "Oaxaca                             7\n",
+       "Durango                            7\n",
+       "Guanajuato                         7\n",
        "Baja California                    7\n",
+       "Quintana Roo                       7\n",
+       "Nayarit                            7\n",
+       "Sonora                             7\n",
+       "Aguascalientes                     7\n",
+       "Veracruz de Ignacio de la Llave    7\n",
+       "Nuevo León                         7\n",
+       "Ciudad de México                   7\n",
+       "Baja California Sur                7\n",
        "Zacatecas                          7\n",
        "Michoacán de Ocampo                7\n",
-       "Tamaulipas                         7\n",
-       "Sinaloa                            7\n",
-       "Chiapas                            7\n",
-       "Estados Unidos Mexicanos           7\n",
-       "Ciudad de México                   7\n",
-       "Puebla                             7\n",
-       "San Luis Potosí                    7\n",
        "México                             7\n",
-       "Quintana Roo                       7\n",
-       "Campeche                           7\n",
-       "Tlaxcala                           7\n",
-       "Nuevo León                         7\n",
-       "Yucatán                            7\n",
        "Chihuahua                          7\n",
+       "Tlaxcala                           7\n",
+       "Sinaloa                            7\n",
+       "Yucatán                            7\n",
        "Colima                             7\n",
-       "Guerrero                           7\n",
-       "Veracruz de Ignacio de la Llave    7\n",
-       "Tabasco                            7\n",
-       "Oaxaca                             7\n",
-       "Jalisco                            7\n",
-       "Hidalgo                            7\n",
-       "Sonora                             7\n",
        "Name: entidad_left, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -959,49 +959,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Nuevo León                          7\n",
-       "Michoacán de Ocampo                 7\n",
-       "Guerrero                            7\n",
-       "Tamaulipas                          7\n",
-       "Puebla                              7\n",
-       "Querétaro                           7\n",
-       "Campeche                            7\n",
-       "Tabasco                             7\n",
-       "Baja California Sur                 7\n",
-       "Yucatán                             7\n",
        "México                              7\n",
-       "Veracruz de Ignacio de la Llave     7\n",
-       "Morelos                             7\n",
-       "Jalisco                             7\n",
-       "Guanajuato                          7\n",
-       "Estados Unidos Mexicanos            7\n",
-       "Coahuila de Zaragoza                7\n",
-       "San Luis Potosí                     7\n",
-       "Tlaxcala                            7\n",
-       "Baja California                     7\n",
-       "Colima                              7\n",
-       "Quintana Roo                        7\n",
-       "Aguascalientes                      7\n",
-       "Sinaloa                             7\n",
-       "Nayarit                             7\n",
-       "Chihuahua                           7\n",
-       "Oaxaca                              7\n",
-       "Hidalgo                             7\n",
-       "Durango                             7\n",
        "Ciudad de México b/                 7\n",
-       "Sonora                              7\n",
-       "Chiapas                             7\n",
        "Zacatecas                           7\n",
+       "Baja California                     7\n",
+       "Veracruz de Ignacio de la Llave     7\n",
+       "Aguascalientes                      7\n",
+       "Coahuila de Zaragoza                7\n",
+       "Morelos                             7\n",
+       "Chiapas                             7\n",
+       "Campeche                            7\n",
+       "San Luis Potosí                     7\n",
+       "Guanajuato                          7\n",
+       "Querétaro                           7\n",
+       "Puebla                              7\n",
+       "Jalisco                             7\n",
+       "Durango                             7\n",
+       "Sonora                              7\n",
+       "Quintana Roo                        7\n",
+       "Oaxaca                              7\n",
+       "Tabasco                             7\n",
+       "Nayarit                             7\n",
+       "Yucatán                             7\n",
+       "Estados Unidos Mexicanos            7\n",
+       "Guerrero                            7\n",
+       "Sinaloa                             7\n",
+       "Colima                              7\n",
+       "Chihuahua                           7\n",
+       "Tamaulipas                          7\n",
+       "Hidalgo                             7\n",
+       "Baja California Sur                 7\n",
+       "Michoacán de Ocampo                 7\n",
+       "Nuevo León                          7\n",
+       "Tlaxcala                            7\n",
        "Name: entidad, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1530,7 @@
        "31  4.012295e+06  4.037357e+06               Oaxaca:  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2027,7 +2027,7 @@
        "[224 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2041,7 +2041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -2053,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -2064,49 +2064,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Nuevo León                          7\n",
-       "Michoacán de Ocampo                 7\n",
-       "Guerrero                            7\n",
-       "Tamaulipas                          7\n",
-       "Puebla                              7\n",
-       "Querétaro                           7\n",
-       "Campeche                            7\n",
-       "Tabasco                             7\n",
-       "Baja California Sur                 7\n",
-       "Yucatán                             7\n",
        "México                              7\n",
-       "Veracruz de Ignacio de la Llave     7\n",
-       "Morelos                             7\n",
-       "Jalisco                             7\n",
-       "Guanajuato                          7\n",
-       "Estados Unidos Mexicanos            7\n",
-       "Coahuila de Zaragoza                7\n",
-       "San Luis Potosí                     7\n",
-       "Tlaxcala                            7\n",
-       "Baja California                     7\n",
-       "Colima                              7\n",
-       "Quintana Roo                        7\n",
-       "Aguascalientes                      7\n",
-       "Sinaloa                             7\n",
-       "Nayarit                             7\n",
-       "Chihuahua                           7\n",
-       "Oaxaca                              7\n",
-       "Hidalgo                             7\n",
-       "Durango                             7\n",
        "Ciudad de México b/                 7\n",
-       "Sonora                              7\n",
-       "Chiapas                             7\n",
        "Zacatecas                           7\n",
+       "Baja California                     7\n",
+       "Veracruz de Ignacio de la Llave     7\n",
+       "Aguascalientes                      7\n",
+       "Coahuila de Zaragoza                7\n",
+       "Morelos                             7\n",
+       "Chiapas                             7\n",
+       "Campeche                            7\n",
+       "San Luis Potosí                     7\n",
+       "Guanajuato                          7\n",
+       "Querétaro                           7\n",
+       "Puebla                              7\n",
+       "Jalisco                             7\n",
+       "Durango                             7\n",
+       "Sonora                              7\n",
+       "Quintana Roo                        7\n",
+       "Oaxaca                              7\n",
+       "Tabasco                             7\n",
+       "Nayarit                             7\n",
+       "Yucatán                             7\n",
+       "Estados Unidos Mexicanos            7\n",
+       "Guerrero                            7\n",
+       "Sinaloa                             7\n",
+       "Colima                              7\n",
+       "Chihuahua                           7\n",
+       "Tamaulipas                          7\n",
+       "Hidalgo                             7\n",
+       "Baja California Sur                 7\n",
+       "Michoacán de Ocampo                 7\n",
+       "Nuevo León                          7\n",
+       "Tlaxcala                            7\n",
        "Name: entidad_left, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -2140,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -2151,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -4591,7 +4591,7 @@
        "[224 rows x 44 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4601,20 +4601,68 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "Finished cleaning up this dataframe and indexing it by entidad and year. I'm exporting the final excel file and opening up a new notebook for finding and imputing missing variables."
+    "final_df1 = final_df.drop(['denuncias_robocarretera', 'denuncias_leyg'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['alumnos_inscritos_hs', 'hombres_inscritos_hs', 'mujeres_inscritas_hs',\n",
+       "       'maestros_hs', 'escuelas_hs', 'convenios_trabajo_no_juicio',\n",
+       "       'conflictos_trabajo', 'emplazamientos_huelga',\n",
+       "       'emplazamientos_huelga_solucionados', 'huelgas_estalladas',\n",
+       "       'huelgas_locales_solucionadas', 'denuncias_total', 'denuncias_salud',\n",
+       "       'denuncias_arma', 'denuncias_bancaria', 'denuncias_comms',\n",
+       "       'denuncias_servpub', 'denuncias_fiscales', 'denuncias_ambiente',\n",
+       "       'denuncias_asocdelictuosa', 'denuncias_patrimoniales',\n",
+       "       'denuncias_propintelectual', 'denuncias_otras', 'total_carretera_km',\n",
+       "       'carretera_pavimentada_km', 'carretera_revestida_km',\n",
+       "       'carretera_terraceria_kg', 'brechas_mejoradas_km', 'prod_oro_kg',\n",
+       "       'prod_plata_kg', 'prod_plomo_t', 'prod_cobre_t', 'prod_zinc_t',\n",
+       "       'prod_coque_t', 'prod_fierropellets_t', 'prod_azufre_t',\n",
+       "       'prod_barita_t', 'prod_fluorita_t', 'altitud', 'costa_km', 'municipios',\n",
+       "       'pop'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df1.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finished cleaning up this dataframe and indexing it by entidad and year. Had to delete two columns that had not collected data for more than five years for ease later down the road. I'm exporting the final excel file and opening up a new notebook for finding and imputing missing variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "writer = pd.ExcelWriter('Mexico_Final.xlsx')\n",
-    "final_df.to_excel(writer)\n",
+    "final_df1.to_excel(writer)\n",
     "writer.save()"
    ]
   }
