--- a/Data_Exploration_Multivariable_Analysis.ipynb
+++ b/Data_Exploration_Multivariable_Analysis.ipynb
@@ -3089,43 +3089,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/mariomoreno/anaconda3/lib/python3.6/site-packages/numpy/linalg/linalg.py:1741: RuntimeWarning: invalid value encountered in slogdet\n",
-      "  sign, logdet = _umath_linalg.slogdet(a, signature=signature)\n",
-      "/Users/mariomoreno/anaconda3/lib/python3.6/site-packages/numpy/linalg/linalg.py:1741: RuntimeWarning: invalid value encountered in slogdet\n",
-      "  sign, logdet = _umath_linalg.slogdet(a, signature=signature)\n",
       "/Users/mariomoreno/anaconda3/lib/python3.6/site-packages/sklearn/covariance/graph_lasso_.py:230: RuntimeWarning: invalid value encountered in multiply\n",
       "  * coefs)\n",
       "/Users/mariomoreno/anaconda3/lib/python3.6/site-packages/sklearn/covariance/graph_lasso_.py:232: RuntimeWarning: invalid value encountered in multiply\n",
       "  * coefs)\n",
       "/Users/mariomoreno/anaconda3/lib/python3.6/site-packages/numpy/linalg/linalg.py:1741: RuntimeWarning: invalid value encountered in slogdet\n",
       "  sign, logdet = _umath_linalg.slogdet(a, signature=signature)\n",
-      "/Users/mariomoreno/anaconda3/lib/python3.6/site-packages/sklearn/covariance/graph_lasso_.py:230: RuntimeWarning: invalid value encountered in multiply\n",
-      "  * coefs)\n",
-      "/Users/mariomoreno/anaconda3/lib/python3.6/site-packages/sklearn/covariance/graph_lasso_.py:232: RuntimeWarning: invalid value encountered in multiply\n",
-      "  * coefs)\n",
       "/Users/mariomoreno/anaconda3/lib/python3.6/site-packages/numpy/linalg/linalg.py:1741: RuntimeWarning: invalid value encountered in slogdet\n",
       "  sign, logdet = _umath_linalg.slogdet(a, signature=signature)\n"
      ]
     },
     {
-     "ename": "FloatingPointError",
-     "evalue": "Non SPD result: the system is too ill-conditioned for this solver. The system is too ill-conditioned for this solver",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFloatingPointError\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-268-38723a79059c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0medge_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# #############################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/covariance/graph_lasso_.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m    697\u001b[0m             \u001b[0memp_cov\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbest_alpha\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtol\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    698\u001b[0m             \u001b[0menet_tol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menet_tol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_iter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_iter\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 699\u001b[0;31m             verbose=inner_verbose, return_n_iter=True)\n\u001b[0m\u001b[1;32m    700\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/covariance/graph_lasso_.py\u001b[0m in \u001b[0;36mgraph_lasso\u001b[0;34m(emp_cov, alpha, cov_init, mode, tol, enet_tol, max_iter, verbose, return_costs, eps, return_n_iter)\u001b[0m\n\u001b[1;32m    254\u001b[0m         e.args = (e.args[0]\n\u001b[1;32m    255\u001b[0m                   + '. The system is too ill-conditioned for this solver',)\n\u001b[0;32m--> 256\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    257\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    258\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mreturn_costs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/covariance/graph_lasso_.py\u001b[0m in \u001b[0;36mgraph_lasso\u001b[0;34m(emp_cov, alpha, cov_init, mode, tol, enet_tol, max_iter, verbose, return_costs, eps, return_n_iter)\u001b[0m\n\u001b[1;32m    245\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    246\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misfinite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcost\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 247\u001b[0;31m                 raise FloatingPointError('Non SPD result: the system is '\n\u001b[0m\u001b[1;32m    248\u001b[0m                                          'too ill-conditioned for this solver')\n\u001b[1;32m    249\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFloatingPointError\u001b[0m: Non SPD result: the system is too ill-conditioned for this solver. The system is too ill-conditioned for this solver"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster 1: Aguascalientes\n",
+      "Cluster 2: Baja California\n",
+      "Cluster 3: Baja California Sur\n",
+      "Cluster 4: Campeche\n",
+      "Cluster 5: Colima\n",
+      "Cluster 6: Michoacán de Ocampo, Michoacán de Ocampo, Michoacán de Ocampo, Michoacán de Ocampo, Michoacán de Ocampo, Michoacán de Ocampo\n",
+      "Cluster 7: Morelos\n",
+      "Cluster 8: Nayarit\n",
+      "Cluster 9: Puebla\n",
+      "Cluster 10: San Luis Potosí, San Luis Potosí, San Luis Potosí, San Luis Potosí, San Luis Potosí, San Luis Potosí, San Luis Potosí\n",
+      "Cluster 11: Sonora, Sonora\n",
+      "Cluster 12: Tlaxcala\n",
+      "Cluster 13: Yucatán\n",
+      "Cluster 14: Aguascalientes\n",
+      "Cluster 15: Baja California\n",
+      "Cluster 16: Baja California Sur\n",
+      "Cluster 17: Campeche\n",
+      "Cluster 18: Colima\n",
+      "Cluster 19: Guanajuato, Guanajuato, Oaxaca, Guanajuato\n",
+      "Cluster 20: Morelos\n",
+      "Cluster 21: Nayarit\n",
+      "Cluster 22: Nuevo León, Nuevo León, Nuevo León, Nuevo León, Nuevo León, Nuevo León, Nuevo León\n",
+      "Cluster 23: Puebla\n",
+      "Cluster 24: Tlaxcala\n",
+      "Cluster 25: Veracruz de Ignaxio de la Llave, Veracruz de Ignaxio de la Llave, Veracruz de Ignaxio de la Llave\n",
+      "Cluster 26: Yucatán\n",
+      "Cluster 27: Aguascalientes\n",
+      "Cluster 28: Baja California\n",
+      "Cluster 29: Baja California Sur\n",
+      "Cluster 30: Campeche\n",
+      "Cluster 31: Coahuila de Zaragoza, Coahuila de Zaragoza, Coahuila de Zaragoza, Coahuila de Zaragoza, Coahuila de Zaragoza, Coahuila de Zaragoza, Coahuila de Zaragoza\n",
+      "Cluster 32: Colima\n",
+      "Cluster 33: Chihuahua, Durango, Zacatecas, Chihuahua, Durango, Zacatecas, Chihuahua, Durango, Zacatecas, Chihuahua, Durango, Zacatecas, Chihuahua, Durango, Zacatecas, Chihuahua, Durango, Zacatecas, Chihuahua, Ciudad de México /b, Durango, Zacatecas\n",
+      "Cluster 34: Guerrero, Guerrero, Guerrero, Guerrero, Guerrero\n",
+      "Cluster 35: Morelos\n",
+      "Cluster 36: Nayarit\n",
+      "Cluster 37: Puebla\n",
+      "Cluster 38: Querétaro, Querétaro, Querétaro\n",
+      "Cluster 39: Tlaxcala\n",
+      "Cluster 40: Yucatán\n",
+      "Cluster 41: Aguascalientes\n",
+      "Cluster 42: Baja California\n",
+      "Cluster 43: Baja California Sur\n",
+      "Cluster 44: Campeche\n",
+      "Cluster 45: Colima\n",
+      "Cluster 46: Chiapas, Tabasco, Tamaulipas, Chiapas, Tabasco, Tamaulipas, Chiapas, Tabasco, Tamaulipas, Chiapas, Tabasco, Tamaulipas, Chiapas, Tabasco, Tamaulipas, Chiapas, Tabasco, Tamaulipas, Chiapas, Tabasco\n",
+      "Cluster 47: Ciudad de México /b, México, Querétaro, Ciudad de México /b, México, Ciudad de México /b, México, Ciudad de México /b, México, Ciudad de México /b, México, Ciudad de México /b, México, México\n",
+      "Cluster 48: Morelos\n",
+      "Cluster 49: Nayarit\n",
+      "Cluster 50: Puebla\n",
+      "Cluster 51: Quintana Roo, Quintana Roo, Quintana Roo, Quintana Roo, Quintana Roo, Quintana Roo, Quintana Roo\n",
+      "Cluster 52: Tlaxcala\n",
+      "Cluster 53: Yucatán\n",
+      "Cluster 54: Aguascalientes\n",
+      "Cluster 55: Baja California\n",
+      "Cluster 56: Baja California Sur\n",
+      "Cluster 57: Campeche\n",
+      "Cluster 58: Colima\n",
+      "Cluster 59: Hidalgo, Oaxaca, Hidalgo, Hidalgo, Veracruz de Ignaxio de la Llave, Hidalgo, Veracruz de Ignaxio de la Llave, Hidalgo, Veracruz de Ignaxio de la Llave, Veracruz de Ignaxio de la Llave, Tamaulipas\n",
+      "Cluster 60: Jalisco, Jalisco, Jalisco, Jalisco, Jalisco, Jalisco\n",
+      "Cluster 61: Morelos\n",
+      "Cluster 62: Nayarit\n",
+      "Cluster 63: Puebla\n",
+      "Cluster 64: Querétaro, Querétaro, Querétaro\n",
+      "Cluster 65: Jalisco, Sinaloa, Sinaloa, Sinaloa, Sinaloa, Sinaloa, Sinaloa, Sinaloa\n",
+      "Cluster 66: Sonora, Sonora, Sonora, Sonora, Sonora\n",
+      "Cluster 67: Tlaxcala\n",
+      "Cluster 68: Yucatán\n",
+      "Cluster 69: Aguascalientes\n",
+      "Cluster 70: Baja California\n",
+      "Cluster 71: Baja California Sur\n",
+      "Cluster 72: Campeche\n",
+      "Cluster 73: Colima\n",
+      "Cluster 74: Hidalgo, Morelos\n",
+      "Cluster 75: Nayarit\n",
+      "Cluster 76: Puebla\n",
+      "Cluster 77: Tlaxcala\n",
+      "Cluster 78: Yucatán\n",
+      "Cluster 79: Aguascalientes\n",
+      "Cluster 80: Baja California\n",
+      "Cluster 81: Baja California Sur\n",
+      "Cluster 82: Campeche\n",
+      "Cluster 83: Colima\n",
+      "Cluster 84: Oaxaca, Guanajuato, Oaxaca, Guanajuato, Oaxaca, Guanajuato, Oaxaca, Guanajuato, Oaxaca\n",
+      "Cluster 85: Guerrero, Guerrero\n",
+      "Cluster 86: Hidalgo\n",
+      "Cluster 87: Morelos\n",
+      "Cluster 88: Nayarit\n",
+      "Cluster 89: Puebla\n",
+      "Cluster 90: Tlaxcala\n",
+      "Cluster 91: Michoacán de Ocampo, Yucatán\n"
      ]
     }
    ],
